--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,38 @@
+.header {
+  text-align: center;
+}
 
+h1 {
+  color: rgb(216 55 49);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.article-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px;
+  max-width: auto;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.article-card {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.article-card img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  object-position: center;
+  margin: 0 auto;
+  border-radius: 4px;
+  width: 100%;
+  height: 150px;
+}
