completes task 06-view-associated-comments

--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -1,7 +1,7 @@
 .nav-link {
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(65, 57, 57);
+    color: rgb(216 55 49);
     text-decoration: none;
     font-weight: bolder;
 }
