--- a/src/SingleArticleStyle.css
+++ b/src/SingleArticleStyle.css
@@ -7,9 +7,10 @@ text-align: center;
 }
 
 .single-article-style h1 {
-    font-size: 24px;
+    font-size: 40px;
+    font-weight: bolder;
     color: rgb(65, 57, 57);
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .single-article-style h2 {
@@ -29,4 +30,32 @@ text-align: center;
     font-size: 16px;
     line-height: auto;
     text-align: left;
+}
+
+.vote-buttons {
+    display: flex;
+    justify-content: left;
+}
+
+.vote-button {
+    background: none;
+    border: 3px solid rgb(216, 55, 49);
+    color: rgb(65, 57, 57);
+    padding: 10px 20px;
+    margin-right: 10px;
+    width: 100px;
+    height: 8px;
+    text-align: center;
+    line-height: 1.2px;
+    font-weight: bolder;
+    border-radius: 8rem;
+    transition: box-shadow 0.1s ease;
+}
+
+.vote-button:hover {
+    box-shadow: 0 6px 8px rgb(65, 57, 57, 0.2);
+}
+
+.vote-button:focus {
+    outline: none;
 }
