--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   padding: 10px 20px;
   background-color: rgb(255, 255, 255);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 15px;
 }
 
 h1 {
