--- a/src/SingleArticleStyle.css
+++ b/src/SingleArticleStyle.css
@@ -59,3 +59,9 @@ text-align: center;
 .vote-button:focus {
     outline: none;
 }
+
+.comment-posted {
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(65, 57, 57);
+    padding-top: 10px;;
+}
