--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.user {
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(65, 57, 57);
+}
+
+
 .article-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
