--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@ h1 {
   color: rgb(65, 57, 57);
 }
 
-
 .article-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -47,4 +46,37 @@ h1 {
   border-radius: 4px;
   width: 100%;
   height: 150px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px; /* Adjust margin as needed */
+}
+
+.coding-button,
+.football-button,
+.cooking-button {
+  background: none;
+  border: 3px solid rgb(216, 55, 49);
+  color: rgb(65, 57, 57);
+  padding: 10px 20px;
+  margin-right: 10px;
+  margin-bottom: 15px;
+  text-align: center;
+  font-weight: bold;
+  border-radius: 8rem;
+  transition: box-shadow 0.1s ease;
+}
+
+.coding-button:hover,
+.football-button:hover,
+.cooking-button:hover {
+  box-shadow: 0 6px 8px rgba(65, 57, 57, 0.2);
+}
+
+.coding-button:focus,
+.football-button:focus,
+.cooking-button:focus {
+  outline: none;
 }
